# serializer version: 1
# name: test_entities[climate.bedroom_bedroom_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 5.0,
      'preset_modes': list([
        'comfort',
        'eco',
        'defrost',
        'timer',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.bedroom_bedroom_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'watts',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 17>,
    'translation_key': 'thermostat',
    'unique_id': 'thermostat_456',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate.bedroom_bedroom_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 19.0,
      'friendly_name': 'Bedroom Thermostat',
      'hvac_action': <HVACAction.IDLE: 'idle'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 5.0,
      'preset_mode': None,
      'preset_modes': list([
        'comfort',
        'eco',
        'defrost',
        'timer',
      ]),
      'supported_features': <ClimateEntityFeature: 17>,
      'temperature': 21.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.bedroom_bedroom_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_entities[climate.living_room_living_room_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 5.0,
      'preset_modes': list([
        'comfort',
        'eco',
        'defrost',
        'timer',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.living_room_living_room_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'watts',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 17>,
    'translation_key': 'thermostat',
    'unique_id': 'thermostat_123',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate.living_room_living_room_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 20.5,
      'friendly_name': 'Living Room Thermostat',
      'hvac_action': <HVACAction.HEATING: 'heating'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 5.0,
      'preset_mode': 'comfort',
      'preset_modes': list([
        'comfort',
        'eco',
        'defrost',
        'timer',
      ]),
      'supported_features': <ClimateEntityFeature: 17>,
      'temperature': 22.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.living_room_living_room_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
